# datastructures-and-algorithms

./: countIslands_BFS.py
C/: .gitignore  CMakeLists.txt  cfgs.h  main.c
C/AVLTree/: CMakeLists.txt  avl.c  avl.h
C/List/: CMakeLists.txt  List.h  list.c  main.c
C/hashtable/: CMakeLists.txt  hashtable.c  hashtable.h
